trunk/Archive2/bf/728095cc600064/output
main.cpp: In function 'int main()':
main.cpp:20:17: error: 'virtual int Rect::area() const' is private
     virtual int area() const {
                 ^
main.cpp:34:25: error: within this context
     std::cout << r.area() << std::endl;
                         ^
